; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-dvb.c_ads_duo_tuner_sleep.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/saa7134/extr_saa7134-dvb.c_ads_duo_tuner_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.saa7134_dev* }
%struct.saa7134_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*)* @ads_duo_tuner_sleep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ads_duo_tuner_sleep(%struct.dvb_frontend* %0) #0 {
  %2 = alloca %struct.dvb_frontend*, align 8
  %3 = alloca %struct.saa7134_dev*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %2, align 8
  %4 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %5 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.saa7134_dev*, %struct.saa7134_dev** %7, align 8
  store %struct.saa7134_dev* %8, %struct.saa7134_dev** %3, align 8
  %9 = load %struct.saa7134_dev*, %struct.saa7134_dev** %3, align 8
  %10 = call i32 @saa7134_set_gpio(%struct.saa7134_dev* %9, i32 22, i32 0)
  %11 = load %struct.dvb_frontend*, %struct.dvb_frontend** %2, align 8
  %12 = call i32 @philips_tda827x_tuner_sleep(%struct.dvb_frontend* %11)
  ret i32 0
}

declare dso_local i32 @saa7134_set_gpio(%struct.saa7134_dev*, i32, i32) #1

declare dso_local i32 @philips_tda827x_tuner_sleep(%struct.dvb_frontend*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
